# FEFU-AI-Master

./: main.py  pyproject.toml
db_course/: samping.sql
matstat/: data.xlsx  laba_3.ipynb  pr_0_1.ipynb  pr_0_2.ipynb  pr_1_1.ipynb  pr_1_2.ipynb  pr_2_1.ipynb  pr_2_2.ipynb  pr_3_1.ipynb  pr_3_2.ipynb  код_к_Лекции-6.r  код_к_Лекции-7.r  код_к_Лекции-8.r
ml_1/: 01A.py  01B.py  assignment.ipynb
ml_1/07C/: main.py  main_old.py  output.txt
python/: O8L.py
